--- a/src/components/FooterStyles.css
+++ b/src/components/FooterStyles.css
@@ -2,7 +2,7 @@
 footer {
     background-color: purple;
     color: #fff;
-    padding: 20px 0;
+    padding: 20px 10px;
   }
   
   .footer-container {
@@ -11,12 +11,14 @@ footer {
   }
   
   .footer-section {
-    width: 30%;
+    width: 100%;
+    margin-bottom: 20px; /* Added margin for spacing between sections */
   }
   
   .footer-section h4 {
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 10px;
+    color: #ffca52;
   }
   
   .footer-section ul {
@@ -26,7 +28,7 @@ footer {
   
   .footer-section ul li {
     margin-bottom: 5px;
-    font-size: 20px;
+    font-size: 18px;
     transition: color 0.3s ease-in-out;
   }
   .footer-section ul li a:hover {
@@ -41,5 +43,6 @@ footer {
     background-color: #111;
     text-align: center;
     padding: 10px 0;
+    font-size: 14px; /* Adjusted font size for responsiveness */
   }
   
