--- a/MissingGrade.css
+++ b/MissingGrade.css
@@ -19,13 +19,22 @@ form>div i {
     padding: 15px;
     text-align: center;
     min-height: 50vh;
-    min-width: 50vw;
+    width: 80vw;
     display: flex;
     flex-direction: column;
     background: #f8f8f885;
     border-radius: 30px;
     backdrop-filter: blur(10px);
+    left: 95px;
+    position: relative;
 }
+
+body {
+    background-image: url('C:\\Users\\ekowd\\OneDrive\\Desktop\\output\\11083926_DCIT205_Assignment1\\11083926_DCIT205_Assignment1\\MissingGradeBackground.webp');
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
+    background-size: 100% 100%;
+  }
 
 h2 {
     margin-bottom: -10px;
@@ -142,50 +151,4 @@ textarea {
     textarea {
         width: 50vw;
     }
-}
-
-.ContactPane {
-  margin-top: 50px;
-  border-radius: 8px;
-  border-color: #2C2A58;
-  border: 15px;
-  text-align: center;
-  background-color: #00d689;
-}
-
-.ContactHeader {
-  text-align: center;
-}
-
-.ContactPane:hover {
-  box-shadow: 10px 10px 10px #2c2a5895;
-}
-
-.ContactText {
-  font-family: 'Segoe UI';
-  font-size: 17px;
-  color: aliceblue;
-}
-
-.collapsible {
-  background-color: rgba(27, 68, 190, 0.875);
-  color: white;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-}
-
-.active, .collapsible:hover {
-  background-color: #322f6f;
-}
-
-.content {
-  padding: 0 18px;
-  display: none;
-  overflow: hidden;
-  background-color: #f1f1f1;
 }
