--- a/missing_grades_system/src/styles/login.css
+++ b/missing_grades_system/src/styles/login.css
@@ -29,4 +29,12 @@ body{
     padding: 10px;
     cursor: pointer;
   }
+  h1{
+    text-align: center;
+    color: #007bff;
+  }
+  .login{
+    color: #007bff;
+  }
+ 
   
