--- a/missing-grade/src/Component/styles/Contactus.css
+++ b/missing-grade/src/Component/styles/Contactus.css
@@ -1,12 +1,10 @@
-
-
 .cotact-section-container {
   margin-top: 7rem;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100vh; 
+  height: 100vh;
 }
 
 .contact-background-image-container {
@@ -27,9 +25,6 @@
   width: 100%;
   height: auto;
 }
-
-
-
 
 .contact-section-image-container {
   flex: 0.9;
@@ -64,6 +59,5 @@
   border: none;
   outline: none;
   font-size: 1.3rem;
-    padding: 0.5rem 1rem;}
-
-    
+  padding: 0.5rem 1rem;
+}
