--- a/my-react-app/src/MissingGradeForm.css
+++ b/my-react-app/src/MissingGradeForm.css
@@ -54,4 +54,57 @@
   .submit-button:hover {
     background-color: #0056b3;
   }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    margin-top: 20px;
+    position: absolute;
+    top: 0;
+    right: 100px;
+}
+
+.dropdown-button {
+    padding: 12px 24px;
+    background-color: rgba(8, 8, 87, 0.774);
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 20px;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
+    
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.footer {
+    background-color: #272270;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
   
