Assignment 1 done successfully

--- a/assignment/src/components/Landing.css
+++ b/assignment/src/components/Landing.css
@@ -1,4 +1,4 @@
-.body
+/* .body
 {
 width: 95%;
 height: 600px;
@@ -156,4 +156,4 @@ margin-left: 35% ;
 {
 background-color:rgb(238, 117, 137);
 color: whitesmoke;
-font :bold;}
+font :bold;} */
