--- a/my-react-app/src/component/LandingPage.css
+++ b/my-react-app/src/component/LandingPage.css
@@ -1,26 +1,33 @@
 .landing-page-container {
-  background: linear-gradient(to right, #3498db, #6c5ce7);
+  background-image: url(C:\Users\USER\Desktop\11210904_DCIT205_Assignment1\my-react-app\src\component\bck.jpg);
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
+}
+
+.landing-page-header {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
+  padding: 1rem;
+  width: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 .landing-page-content {
   text-align: center;
   color: #fff;
   padding: 2rem;
+  flex: 1;
 }
 
-.landing-page-title {
-  font-size: 3rem;
-  font-weight: bold;
-  margin-bottom: 1rem;
-}
-
-.landing-page-description {
-  font-size: 1.25rem;
-  margin-bottom: 2rem;
+.landing-page-footer {
+  padding: 1rem;
+  background-color: #2c3e50;
+  color: #fff;
+  text-align: center;
+  margin-top: auto;
 }
 
 .landing-page-button {
@@ -37,4 +44,10 @@
 .landing-page-button:hover {
   background-color: #6c5ce7;
   color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+  .login-form {
+    max-width: 100%;
+  }
 }
