--- a/src/component/login.css
+++ b/src/component/login.css
@@ -1,14 +1,29 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
+    background-color:aliceblue;
+   
   }
   
- 
+ .head{
+  color: #fff;
+  padding: 0;
+ }
+
   .login-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 40px;
+    background-image: url('../images/AdobeStock.webp'); 
+    background-size: 100% 100%; /* Cover entire container */
+    background-size: cover;
+    background-position: center;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+  align-items: center;
+  justify-content: center;
    
   }
   
@@ -26,7 +41,7 @@ body {
     object-fit: cover;
   }
   
-  /* Form styles */
+  
   .form-group {
     margin-bottom: 20px;
   }
@@ -45,10 +60,10 @@ body {
     border-radius: 100px;
   }
   
-  button {
+  .butt {
     width: 100%;
     padding: 10px;
-    background-color:lightblue;
+    background-color:cyan;
     color: #fff;
     border: none;
     border-radius: 50px;
@@ -56,7 +71,7 @@ body {
     transition: background-color 0.3s ease;
   }
   
-  button:hover {
+  .butt:hover {
     background-color: #0056b3;
     border: 2px solid black;
   }
