--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,15 @@
 .header {
     background-color: #333; 
     height: 100px;
-    justify-content: right;
+  }
+
+  .logo{
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(10, 10, 50);
+    padding-top: 10px;
+    margin-top: 15px;
+    text-align:left
   }
   
   nav ul {
@@ -9,6 +17,7 @@
     padding: 0;
     margin: 0;
     display: flex;
+    justify-content: end;
   }
   
   nav ul li {
