Worked on footer across the pages

--- a/theapp/src/Footer_02.css
+++ b/theapp/src/Footer_02.css
@@ -1,9 +1,9 @@
 
 .footer {
-  margin-top: 50px;
+    margin-top: 50px;
     bottom: 0;
     width: 100%;
-    background-color: #333; /* Customize the background color */
+    background-color: #c91e1e; /* Customize the background color */
     color: white; /* Customize the text color */
     text-align: center;
     padding: 15px 0;
