--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --main-color: #bd9c6c;
   --blue: #2c2a58;
   --black: #13131a;
+  --black-light:#232331;
   --bg: #2c2a58;
   --black2: #010103;
   --border: 0.2rem solid #bd9c6c;
