modified all the seven pages with content

--- a/missing-grades/src/App.css
+++ b/missing-grades/src/App.css
@@ -11,7 +11,7 @@ main{
   padding: 20px;
 }
 .sidebar{
-  background: #000;
+  background: #3e1e7d;
   color: #fff;
   height: 100vh;
   width: 200px;
