--- a/assignment_work/src/Components/dashboardpage/dashboard.css
+++ b/assignment_work/src/Components/dashboardpage/dashboard.css
@@ -1,7 +1,7 @@
 .row1{
     display: grid;
     grid-gap: 10px;
-    justify-content: space-around;
+    justify-content: end;
 }
 .float-right{
     float: right;
