--- a/11357610/react-app/src/components/IntroSection.css
+++ b/11357610/react-app/src/components/IntroSection.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(img/dcs-banner.jpg);
+    background-image: url(./public/img/dcs-banner.jpg);
     background-position: center;
     background-size: cover;
     background-attachment:scroll;
