--- a/missing-grades/src/Components/Homepage/styles.css
+++ b/missing-grades/src/Components/Homepage/styles.css
@@ -258,3 +258,71 @@ gap: 40px;
     font-weight: bold;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
 }
+
+footer{
+  background: linear-gradient(to bottom,#f5f5f5, #ffffff);
+  width: 100%;
+  border-top: 2px solid #a0c4ff;
+  border-top-right-radius: 5ch;
+  border-top-left-radius: 5ch;    
+  margin-top: auto;
+}
+hr{
+  margin-top:40px;
+}
+.footContainer{
+  max-width: 1140px;
+}
+.footyMargin{
+  margin-left: 30px;
+  display: flex;
+  gap: 30px;
+}
+.footContainer-col{
+  padding:10px;
+
+}
+.footContainer-colList a{
+  text-decoration: none;
+  color:hsl(220, 50%, 30%);
+  transition:.5s;
+}
+.footContainer-colList{
+  list-style-type: none;
+  text-align: left;
+}
+.footContainer-colList li{
+  margin-bottom: 8px;
+  margin-left: 0;
+}
+.footContainer-col1 h3{
+  text-align: center;
+  color: hsl(220, 50%, 30%);
+}
+.footContainer-colList a:hover{
+  color: #BD9C6c;
+  text-decoration: underline;
+}
+.footContainer-col1 img{
+  margin-top: 20px;
+  margin-left:40px;
+  margin-right: 20px;
+}
+.cont-change{
+  margin-left: 30px;
+  color:hsl(220, 50%, 30%);
+}
+.cont-change0{
+  text-align: center;
+  color:hsl(220, 50%, 30%);
+
+}
+footer::after {
+  content: "  Copyright ©2023 All rights reserved";
+ line-height: 50px;
+  color: #f5f5f5;
+  display: block;
+  position: absolute;
+  width: 100%;
+  background-color:  hsl(220, 50%, 30%);
+}
