--- a/grade_reporting_system/src/CSS/Header.css
+++ b/grade_reporting_system/src/CSS/Header.css
@@ -1,5 +1,3 @@
-/* Header.css */
-
 .header {
   display: flex;
   position: fixed;
@@ -10,7 +8,7 @@
   align-items: center;
   padding: 10px 20px;
   box-shadow: 1px 2.5px 0.7px rgba(0, 0, 0, 0.06);
-  background-color: rgba(200, 255, 255, 0.95); /* Adjust the background color as needed */
+  background-color: rgba(200, 255, 255, 0.95);
   z-index: 100;
 }
 
@@ -22,16 +20,18 @@
 }
 
 .search-bar input {
+  height: 20.6667px;
   padding: 8px;
+  outline: 0;
   min-width: 100px;
   border: 1px solid #ccc;
   border-radius: 20px;
-  font-size: large;
   box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.06);
 }
 
 .search-bar input::placeholder {
   font-style: italic;
+  font-size: medium;
 }
 
 .search-button {
@@ -66,7 +66,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(2, 189, 189); /* Adjust the background color as needed */
+  background-color: rgb(2, 189, 189); 
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -80,7 +80,7 @@
 .menu-button:hover,
 .notification-button:hover,
 .profile-button:hover {
-  background-color: rgb(4, 144, 144); /* Adjust the hover background color as needed */
+  background-color: rgb(4, 144, 144); 
 }
 
 .dropdown {
@@ -122,6 +122,6 @@
 }
 
 .dark {
-  background-color: #333; /* Dark mode background color */
-  color: #fff; /* Dark mode text color */
+  background-color: #333; 
+  color: #fff; 
 }
