--- a/frontend-grading-assignment/src/App.css
+++ b/frontend-grading-assignment/src/App.css
@@ -14,6 +14,15 @@
  .navbar select {
   margin: 0 10px;
  }
+
+ .home{
+  color: black;
+ }
+
+ .inst_container{
+  color: black;
+  text-decoration: none;
+ }
  
  .App-header {
   padding: 0;
