--- a/my-project/src/components/components-css/Footer.css
+++ b/my-project/src/components/components-css/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #222;
+  background-color: #201e40;
   /* Dark blue background */
   padding: 20px;
   display: flex;
@@ -7,6 +7,7 @@
   align-items: flex-start;
   /* Adjust to "center" if desired */
   border-top: 1px solid #ddd;
+  width: 100%
 }
 
 .social-links {
@@ -20,8 +21,10 @@
 
 .social-links a {
   font-size: 1.2em;
-  margin-left: 10px;
+  margin-left: 20px;
   border-radius: 5px;
+  color: aqua;
+
   /* Rounded corners */
   /* Add icon styles here (e.g., font-awesome, svg icons) */
 }
@@ -29,6 +32,9 @@
 .newsletter-signup {
   display: flex;
   align-items: center;
+  margin-right: 100px;
+  width: 100%;
+
 }
 
 .newsletter-signup input {
@@ -37,39 +43,45 @@
   border-radius: 5px;
   font-size: 0.8em;
   background-color: #f5f5f5;
-  width: 150px;
+  width: 200px;
   /* Adjust width as needed */
-  margin-right: 5px;
-}
+  margin-right: 100px;
+  margin-bottom: 20px;
+  color: #000;
 
-.newsletter-signup button {
-  background-color: #66b3ff;
-  color: #fff;
-  padding: 5px 10px;
-  /* Reduce button size */
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
 }
 
 .copyright {
-  font-size: 0.7em;
+  font-size: 1rem;
   margin-top: 10px;
-  text-align: center;
+  text-align: right;
+  color: #f5f5f5;
+  align-items: flex-start;
+  margin-bottom: 3px
 }
 
 .hr {
   border-top: 1px solid #ddd;
-  margin: 15px 0;
-  /* Add space above and below */
+  margin: 1px 0;
+  width: 100%
+    /* Add space above and below */
 }
 
-a.contact-us,
-a.site-map {
-  color: #66b3ff;
-  text-decoration: none;
-  margin-right: 10px;
-  font-size: 0.8em;
+a.contact {
+  color: white;
 }
 
-/* Additional styles for specific icons, hover effects, etc. */
+.footer-info {
+  color: whitesmoke;
+  font-size: 1.2rem;
+
+
+}
+
+.footer-info p {
+  padding: 10px;
+  width: 100%;
+  margin-left: 10px;
+  color: white;
+
+}
