--- a/my-project/src/components/components-css/HS.css
+++ b/my-project/src/components/components-css/HS.css
@@ -1,6 +1,8 @@
+
 .help-and-support-page {
   padding: 2rem;
   font-family: sans-serif;
+  background-image:url(../components-images/gty5.jpg);
 }
 
 h2 {
