--- a/src/components-css/Dashboard.css
+++ b/src/components-css/Dashboard.css
@@ -5,20 +5,23 @@
 }
 
 .Dashboard {
-    padding: 9px;
     display: flex;
-    height: 100dvh;
 }
 
 .sidebar {
+    z-index: 2;
+    position: fixed;
     padding: 8px;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     width: 18%;
     border-radius: 8px;
+    border-bottom-right-radius: 0px;
     font-size: 1em;
-    background: #060f20;
+    background: #151594;
 }
 
 .user {
@@ -37,7 +40,7 @@
 
 .user img {
     margin-right: 10px;
-    width: 40px;
+    width: 38px;
     border-radius: 50%;
 }
 
@@ -50,12 +53,13 @@
 }
 
 .active {
-    background: white;
-    font-weight: 500;
-    color: #060f20;
+    background: #fff !important;
+    font-weight: 500 !important;
+    color: #060f20 !important;
 }
 
 .nav-links {
+    cursor: pointer;
     display: flex;
     justify-content: left;
     padding: 5px 5px 5px 20px ;
@@ -64,12 +68,24 @@
     width: 100%;
     border-radius: 6px;
     margin-bottom: 12px;
-}
-
-.non-active {
     color: #fff;
     background: rgba(255, 255, 255, 0.089);
+}
 
+.nav-links:hover {
+    transition: 0.2s ease-in-out;
+    transform: scale(1.04);
+}
+
+.navLinks {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.logout {
+    margin: 0px;
 }
 
 .link-icon {
@@ -80,22 +96,25 @@
 .dashboard-logo {
     margin-top: 10px;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.dashboard-logo-icon {
+.dashboard-logo-icon span {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 38px;
     height: 38px;
-    font-size: 1em;
+    font-size: 0.97em;
     font-weight: 600;
     background: var(--colorOne);
     color: var(--colorTwo);
     border-radius: 50%;
+   
 }
 
-.dashboard-logo-name {
+.dashboard-logo-name span{
     user-select: none;
     display: flex;
     align-items: center;
@@ -106,8 +125,263 @@
 }
 
 .dashboard-content {
+    position: absolute;
+    right: 0;
     margin-left: 9px;
     border-radius: 8px;
     width: 82%;
-    background: var(--colorOne);
+    background: rgb(243, 243, 243);
+}
+
+.greeting {
+    display: flex;
+    flex-direction: column;
+}
+
+.greeting span:nth-child(1) {
+    font-size: 1.3em;
+    font-weight: 500;
+    color: #060f20;
+}
+
+.greeting span:nth-child(2) {
+    font-size: 1em;
+    color: #060f208a;
+}
+
+.notification {
+    cursor: pointer;
+    margin-top: 10px;
+    display: flex;
+}
+
+.notificationToggle {
+    right: -20px !important;
+    display: block !important;
+}
+
+.notificationCard {
+    cursor: pointer;
+    display: none;
+    position: absolute;
+    right: -230px;
+    background: white;
+    padding: 10px;
+    border-radius: 5px;
+    top: 60px;
+    border: 1px solid rgb(216, 216, 216);
+}
+
+.notificationCard:hover {
+    background-color: #e9e9e9;
+}
+
+.bell {
+    font-size: 1.3em;
+    color: #060f20;
+}
+
+.badge {
+    top: -8px;
+    left: -10px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    background: red;
+    color: #fff;
+    font-size: 0.8em;
+    font-weight: 400;
+    width: 20px !important;
+    height: 20px !important;
+    border-radius: 50%;
+}
+
+.burger {
+    color: #5c76a7;
+    cursor: pointer;
+    font-size: 27px;
+    position: relative;
+}
+
+.Close {
+    display: flex;
+    display: none;
+}
+
+.first-section {
+    width: fit-content;
+    padding: 0;
+    gap: 10px;
+}
+
+.content-of-dashboard {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    width: 100%;
+}
+
+.gpa-report {
+    font-size: 2em;
+    font-weight: 500;
+}
+
+.gpa-name {
+    font-size: 0.9em;
+    font-weight: 300;
+}
+
+.missing-grade-number {
+    font-size: 2em;
+    font-weight: 500;
+}
+
+.missing-grade-name {
+    font-size: 0.9em;
+    font-weight: 300;
+}
+
+.card {
+    background: #fff;
+    border: 1px solid rgb(182, 182, 182);
+    color: #222222;
+    padding: 10px;
+    width:241px;
+    margin-bottom: 10px;
+    border-radius: 3px;
+}
+
+.increase-decrease {
+    color: red;
+    display: flex;
+    align-items: center;
+}
+
+.increase-decrease div:nth-child(2) {
+    margin-top: -3px;
+    margin-left: 4px;
+}
+
+.arrowUp {
+    height: 10px;
+}
+
+.second-section {
+    height: fit-content;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    gap: 10px;
+    display: flex;
+    margin-bottom: 30px;
+}
+
+
+@media only screen and (max-width: 800px) {
+
+    .Dashboard {
+        padding:  0;
+    }
+
+    .content-of-dashboard {
+        padding: 5px;
+    }
+
+    .nav-links {
+        transition: 0.2s ease-in;
+        justify-content: center;
+    }
+
+    .sidebar {
+        border-bottom-left-radius: 0;
+        border-top-left-radius: 0;
+        width: 14%;
+        transition: 0.2s ease-in;
+    }
+
+    .user img {
+        margin:  0;
+    }
+
+    .user {
+        padding: 5px;
+    }
+
+    .nav-links {
+        height: 40px;
+        padding: 0;
+    }
+
+    .link-icon {
+        margin: 0;
+    }
+
+    .link-name {
+        height: 0;
+        width: 0;
+        overflow: hidden;
+    }
+
+    .username {
+        width: 0;
+        height: 0;
+        overflow: hidden;
+    }
+
+
+    .dashboard-logo-name {
+        height: 0;
+        width: 0;
+        overflow: hidden;
+    }
+
+    .dashboard-content {
+        width: 85%;
+        position: absolute;
+        right: 0;
+    }
+
+    .click .bars {
+        display: none;
+    }
+
+    .click .Close {
+        display: inline-block;
+    }
+
+    .click {
+        width: 60% !important;
+        transition: 0.2s ease-in;
+    }
+
+    .click .user img {
+        margin-right: 10px;
+    }
+
+    .click .link-icon {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .click .nav-links{
+        justify-content: left;
+    }
+
+    .click .username,
+    .click .link-name,
+    .click .dashboard-logo-name {
+        align-items: center;
+        width: 100%;
+        transition: 0.5s;
+        display: flex;
+        height: 100%;
+    }
+
+}
+@keyframes transition {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
