--- a/react-frontend/src/styles/gradereport.css
+++ b/react-frontend/src/styles/gradereport.css
@@ -1,4 +1,4 @@
-body {
+.body2 {
   background: url("../assets/report.jpg");
   padding: 0;
   margin: 0;
@@ -17,11 +17,6 @@ body {
   justify-content: space-between;
 }
 
-.grade-section-image-container {
-  flex: 0.9;
-  margin-right: 1rem;
-  margin-top: 15rem;
-}
 .grade-section-text-container {
   flex: 1;
   justify-content: center;
