--- a/src/Components/Help2/Help2.css
+++ b/src/Components/Help2/Help2.css
@@ -1,38 +1,38 @@
 .main-container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-  }
-  
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.inner-container {
+  flex: 1;
+  margin: 10px;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+}
+
+.image-container {
+  flex: 1;
+  text-align: center;
+}
+
+.image-container img {
+  max-width: 100%;
+  height: auto;
+}
+
+.text-container {
+  flex: 1;
+  padding: 10px;
+  text-align: center;
+}
+
+
+@media (max-width: 768px) {
   .inner-container {
-    flex: 1; 
-    margin: 10px;
-    border: 1px solid #ccc;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column; 
+    flex: 100%;
+    /* Full width for inner containers on smaller screens */
   }
-  
-  .image-container {
-    flex: 1; 
-    text-align: center;
-  }
-  
-  .image-container img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .text-container {
-    flex: 1; 
-    padding: 10px;
-    text-align: center;
-  }
-  
-  
-  @media (max-width: 768px) {
-    .inner-container {
-      flex: 100%; /* Full width for inner containers on smaller screens */
-    }
-  }
-  
+}
